bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: reassignment to val
  litMessage= lettre
            ^BDR2:5: error: not found: value lettre
lettre match {
^